--- a/DiDi.html
+++ b/DiDi.html
@@ -4,14 +4,14 @@
     <title>DiDi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Electron - A Roblox Exploit">
+    <meta name="description" content="DiDi - A Roblox Exploit">
     <meta name="keywords" content="roblox, exploit, rice, green, electron">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
     <link href="DiDi_files/css.css" rel="stylesheet">
     <link rel="stylesheet" href="DiDi_files/bootstrap.min.css">
     <link rel="stylesheet" href="DiDi_files/owl.carousel.min.css">
     <link href="DiDi_files/style.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/KimasDimas/DiDi-Roblox.github.io/main/canvas(1).ico">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/DiDi-Roblox/DiDi-Roblox.github.io/main/canvas(1).ico">
     <script type="text/javascript" id="www-widgetapi-script" src="DiDi_files/www-widgetapi.js" async=""></script><script src="DiDi_files/61915796ee.js" crossorigin="anonymous" type="text/javascript"></script><style media="all" id="fa-v4-font-face">/*!
     <style>
         d img {
@@ -194,7 +194,7 @@
                 <h2>Download</h2>
                 <p class="tagline">You can download DiDi by clicking the <b>download</b> button below.</p>
                 <div class="my-4">
-                    <a href="https://drive.google.com/uc?export=download&confirm=no_antivirus&id=1Rxx802BFGMiP8VJ1az7WerIw_YciCKbO" target="_blank" class="btn btn-light">Download</a>
+                    <a href="https://getfile.dokpub.com/yandex/get/https://disk.yandex.ru/d/knu-yB-pRlKhAA" target="_blank" class="btn btn-light">Download</a>
                 </div>
         </div>
     </div>
