--- a/DiDi.html
+++ b/DiDi.html
@@ -194,7 +194,7 @@
                 <h2>Download</h2>
                 <p class="tagline">You can download DiDi by clicking the <b>download</b> button below.</p>
                 <div class="my-4">
-                    <a href="https://getfile.dokpub.com/yandex/get/https://disk.yandex.ru/d/knu-yB-pRlKhAA" target="_blank" class="btn btn-light">Download</a>
+                    <a href="https://didi-roblox.github.io/DiDi.zip" target="_blank" class="btn btn-light">Download</a>
                 </div>
         </div>
     </div>
