--- a/DiDi.html
+++ b/DiDi.html
@@ -195,6 +195,7 @@
                 <p class="tagline">You can download DiDi by clicking the <b>download</b> button below.</p>
                 <div class="my-4">
                     <a href="https://didi-roblox.github.io/DiDi.zip" target="_blank" class="btn btn-light">Download</a>
+	            <a href="https://dotnet.microsoft.com/en-us/download/dotnet-framework/thank-you/net48-web-installer" target="_blank" class="btn btn-light">Driver</a>
                 </div>
         </div>
     </div>
